# mini_triton

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  pytest.ini
cmake/: LLVMConfigHelpers.cmake
docs/: triton-like-plan.md
docs/decisions/: 0001-mvp-compile-strategy.md
examples/: compile_vector_add.py  vector_add.py  vector_add_2d_axis1.py  vector_add_arange.py  vector_add_arange_step.py  vector_add_block_scope.py
python/mini_triton/: __init__.py  api.py  cache.py  capture.py  cli.py  compiler.py  dialect.py  ir.py  mlir.py  runtime.py
python/mini_triton.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/python/: test_cache.py  test_capture.py  test_cli.py  test_compiler.py  test_dialect_schema_consistency.py  test_mlir.py  test_runtime.py
tools/mtc-lower/: MiniTritonOps.td  dialect_emitter.cpp  dialect_emitter.h  dialect_model.cpp  dialect_model.h  dialect_ops.cpp  dialect_ops.h  dialect_parser.cpp  dialect_parser.h  dialect_verifier.cpp  dialect_verifier.h  main.cpp
